<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>open3d</name>
  <version>0.19.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Christian.Rauch@unileoben.ac.at">Christian Rauch</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>libx11</depend>
  <depend>libc++-dev</depend>
  <depend>opengl</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
